<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_view">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />


    <Button
        android:id="@+id/btn_add_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="100dp"
        android:text="@string/btn_add_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_scroll"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_settlement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="100dp"
        android:text="@string/btn_settlement"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_scroll"
        app:layout_constraintVertical_bias="1.0" />

        <ScrollView
            android:id="@+id/table_scroll"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <TableLayout
                android:id="@+id/tbl_expenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1,2">

                <TableRow
                    android:id="@+id/tbl_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/name"
                        android:paddingStart="10dp"
                        android:text="@string/title_name"
                        android:textColor="#555555"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/amount"
                        android:text="@string/title_amount"
                        android:textColor="#555555"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/description"
                        android:text="@string/title_description"
                        android:textColor="#555555"
                        android:textSize="20dp" />
                </TableRow>
            </TableLayout>
        </ScrollView>
    <LinearLayout
        android:id="@+id/totalAndAverage"
        android:layout_width="415dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_scroll"
        app:layout_constraintVertical_bias="0.0">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_expenses_avr_column"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/avg_text"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/txt_expenses_avr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/default_amount"
                android:textSize="20sp"
                android:layout_weight="1"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_expenses_total_column"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/total_expenses"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/txt_expenses_total"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/default_amount"
                android:textSize="20sp"
                android:layout_weight="1"
                android:gravity="center"/>
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>